# vivace

./: CMakeLists.txt  README.md
cmake/: FindAlleg.cmake
game/: game.cmake
game/src/: game.cpp
include/vivace/: allegro.hpp  base.hpp  vivace.hpp
src/: init.cpp
